# SOM_Seq_Sim

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  TODO.md  changelog.md  env.yml  mkdocs.yml  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish.yml  test.yml
SOM/: README.md  som.py
SOM/data/: .gitattributes  iris_categorical_data.csv  iris_training_data.csv  seq_sim_categorical_data.csv  seq_sim_training_data.csv  titanic_categorical_data.csv  titanic_training_data.csv
SOM/examples/: seq_sim_workflow.ipynb  som_example.py  som_example_iris.ipynb  som_example_iris.py  som_example_seq.ipynb  som_example_seq.py  som_example_titanic.ipynb  som_example_titanic.py
SOM/utils/: SOM.py  som_utils.py
Seq_Sim/: README.md  TODO.md  bimodal_example.py  config.yml  dev_sequencing_code.py  example.yaml  exp.py  function.R  seq_sim.py  simulation.R  simulation.sh  trimodal_example.py  unimodal_example.py  utils.py
Seq_Sim/examples/: som_example.py
Seq_Sim/utils/: FileLoader.py  SOM.py  SimSeq.py  TimeSeriesSimSeq.py  load_configs.py  seq_sim_utils.py
Seq_Sim/zhang_lab/: association_nam.py  conditional_permutation.py  config.yml  create_nam.py  empirical_fdrs.py  fun.py  function.R  generate_dummy_data_woInteraction.py  generate_dummy_metadata.py  generate_pseudo_features.py  generate_pseudo_pcs_woInteraction.py  get_density.py  glm_interact.py  simulation.R  simulation.sh  tail_counts.py
assets/: logo.R
data/: datasimulated_data_numSamp10_foldChange0.1_pseudo_feature.csv  sim_data_umap_data.csv
data/simulation/: SHAP_sd0.1_fci3_clusterRatio0.75_diseaseRatio0.05.csv  simulated_cna_data_jade_woi_advanced_numCell100_numSamp10_sd0.1_fci0.1_clusterRatio0.7_diseaseRatio0.05.csv  simulated_cna_data_jade_woi_advanced_numCell100_numSamp10_sd0.1_fci0.75_clusterRatio0.7_diseaseRatio0.05.csv  simulated_cna_data_jade_woi_advanced_numCell100_numSamp10_sd0.1_fci1.5_clusterRatio0.7_diseaseRatio0.05.csv  simulated_cna_data_jade_woi_advanced_numCell100_numSamp10_sd0.1_fci3_clusterRatio0.7_diseaseRatio0.05.csv  simulated_cna_data_jade_woi_advanced_numCell100_numSamp20_sd0.1_fci0.1_clusterRatio0.7_diseaseRatio0.05.csv  simulated_cna_data_jade_woi_advanced_numCell100_numSamp20_sd0.1_fci0.75_clusterRatio0.7_diseaseRatio0.05.csv  simulated_cna_data_jade_woi_advanced_numCell100_numSamp20_sd0.1_fci1.5_clusterRatio0.7_diseaseRatio0.05.csv  simulated_cna_data_jade_woi_advanced_numCell100_numSamp20_sd0.1_fci3_clusterRatio0.7_diseaseRatio0.05.csv  simulated_cna_data_jade_woi_advanced_numCell100_numSamp30_sd0.1_fci0.1_clusterRatio0.7_diseaseRatio0.05.csv  simulated_cna_data_jade_woi_advanced_numCell100_numSamp30_sd0.1_fci0.75_clusterRatio0.7_diseaseRatio0.05.csv  simulated_cna_data_jade_woi_advanced_numCell100_numSamp30_sd0.1_fci1.5_clusterRatio0.7_diseaseRatio0.05.csv  simulated_cna_data_jade_woi_advanced_numCell100_numSamp30_sd0.1_fci3_clusterRatio0.7_diseaseRatio0.05.csv  simulated_pc_NAM_HARMONIZED_jade_woi_advanced_numCell100_numSamp10_sd0.1_fci0.1_clusterRatio0.7_diseaseRatio0.05.csv  simulated_pc_NAM_HARMONIZED_jade_woi_advanced_numCell100_numSamp10_sd0.1_fci0.75_clusterRatio0.7_diseaseRatio0.05.csv  (+12 more)
docs/: index.md  references.md  requirements.txt  tutorial1.md  tutorial2.md
test/: seq_test.py
(+17 files in other folders)
