[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "som-seq-sim"
version = "1.0.0"
description = "Single-cell sequencing simulation and Self-Organizing Map analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Zachary Caterer",  email = "zachary.caterer@colorado.edu" },
    { name = "Madeline Pernat" },
    { name = "Victoria Hurd" },
]
keywords = [
    "bioinformatics",
    "single-cell",
    "sequencing",
    "self-organizing maps",
    "dimensionality reduction",
    "clustering",
    "simulation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.2",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "minisom",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme",
]

[project.scripts]
som-fit  = "SOM.som:main"
seq-sim  = "Seq_Sim.seq_sim:main"

[project.urls]
Homepage      = "https://github.com/caterer-z-t/SOM_Seq_Sim"
Documentation = "https://som-seq-sim.readthedocs.io"
Repository    = "https://github.com/caterer-z-t/SOM_Seq_Sim"
Issues        = "https://github.com/caterer-z-t/SOM_Seq_Sim/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["SOM*", "Seq_Sim*"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.black]
line-length    = 99
target-version = ["py39", "py310", "py311", "py312"]
